tests/build/fail/widget/malformed_property_type1.stderr
error: expected property type
 --> $DIR/malformed_property_type1.rs:8:13
  |
8 |         foo := 10;
  |             ^

error: property `foo` is not inherited nor declared by the widget
  --> $DIR/malformed_property_type1.rs:11:18
   |
11 |     fn new_child(foo: bool) -> NilUiNode {
   |                  ^^^
